# CompareLLM

./: .env  .env.example  .gitignore  Makefile  ReadMe.MD  ReadMe.md  docker-compose.yml
.github/workflows/: ci.yml
api/: main.py  registry.py  requirements.txt
backend/: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
backend/api/: DEPRECATED_chat_completions.py  chat_completions.py  chat_routes.py  embed_routes.py  enhanced_routes.py  health_routes.py  legacy.py  router.py  utils_routes.py
backend/app/: errors.py  logging.py  main.py  settings.py  sse.py
backend/app/api/: container.py  deps.py  middleware.py
backend/app/api/routers/: chat.py  embeddings.py  health.py  providers.py
backend/app/config/: __init__.py  loader.py  schema.py
backend/app/domain/: __init__.py  chat_service.py  embedding_service.py
backend/app/infra/: __init__.py
backend/app/infra/session/: __init__.py  base.py  factory.py  memory.py  redis.py
backend/app/infra/vectorstore/: __init__.py  base.py  factory.py  memory.py  pgvector.py
backend/app/providers/: __init__.py  anthropic_provider.py  base.py  cohere_provider.py  gemini_provider.py  openai_compat.py  params.py  registry.py  voyage_provider.py
backend/config/: logging.py  settings.py
backend/core/: config_loader.py  dataset_catalog.py  dependencies.py  embedding_factory.py  embedding_registry.py  embedding_util.py  exceptions.py  model_factory.py  model_registry.py
backend/graphs/: factory.py  state.py
backend/models/: enhanced_requests.py  requests.py  responses.py
backend/providers/: anthropic_params.py  base.py  registry.py
backend/providers/adapters/: DEPRECATED_chat_adapter.py  chat_adapter.py  embedding_adapter.py  enhanced_chat_adapter.py  langchain_chat_adapter.py
backend/routers/: chat.py  embeddings.py  langgraph.py  providers.py  vision.py
backend/services/: DEPRECATED_chat_service.py  chat_service.py  dataset_service.py  embedding_service.py  embedding_services.py  enhanced_chat_service.py  graph_service.py  langgraph_service.py  provider_service.py  search_services.py  vision_service.py
backend/src/comparellm/: __init__.py  errors.py  main.py  settings.py
backend/src/comparellm/api/: __init__.py  container.py  deps.py  middleware.py
backend/src/comparellm/api/routers/: chat.py  embeddings.py  health.py  prompts.py  providers.py
backend/src/comparellm/config/: __init__.py  loader.py
backend/src/comparellm/domain/: chat_service.py  embedding_service.py  models.py
backend/src/comparellm/infra/prompts/: __init__.py  base.py  disabled.py  factory.py  http.py
backend/src/comparellm/infra/session/: __init__.py  base.py  factory.py  memory.py  redis.py
backend/src/comparellm/infra/vectorstore/: __init__.py  base.py  factory.py  memory.py  mmr.py  pgvector.py
backend/src/comparellm/providers/: __init__.py  anthropic_provider.py  base.py  cohere_provider.py  gemini_provider.py  openai_compat.py  params.py  registry.py  voyage_provider.py
backend/storage/: base.py  memory_store.py
backend/tests/: conftest.py  fakes.py  test_chat_stream.py  test_config_schema.py  test_embeddings.py  test_health.py  test_params.py  test_prompts.py  test_settings.py
backend/utils/: similarity.py
config/: models.yaml
scripts/: pull-models.sh
ui/: Dockerfile  next.config.ts  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/backend/[...path]/: route.ts
ui/app/components/: CompareLLMClient.tsx
ui/app/components/chat/: ChatResults.tsx  InteractiveChatModal.tsx  ModelList.tsx  PromptPicker.tsx  ProviderParameterEditor.tsx
ui/app/components/embeddings/: EmbeddingLeftRail.tsx  EmbeddingRightRail.tsx
ui/app/components/image/: ImageLeftRail.tsx  ImageResults.tsx  ImageRightRail.tsx
ui/app/components/md/: CodeBlock.tsx
ui/app/components/ui/: LoadingBar.tsx  ModelBadge.tsx  Spinner.tsx  Tabs.tsx
ui/app/lib/: colors.ts  config.ts  types.ts  utils.ts
ui/components/: Footer.tsx  Header.tsx  TabNavigation.tsx
ui/components/chat/: ChatControls.tsx  ChatResults.tsx  InteractiveChatModal.tsx  ModelSelector.tsx  ParameterControls.tsx
ui/components/embedding/: DatasetManager.tsx  DatasetUpload.tsx  EmbeddingModelSelector.tsx  SearchInterface.tsx  SearchResults.tsx
ui/hooks/: useDatasets.ts  useProviders.ts
ui/types/: index.ts
