[project]
name = "comparellm-backend"
version = "1.0.0"
description = "Multi-provider LLM comparison and embeddings service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",

    # Config / settings / serialization
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "orjson>=3.10",

    # Logging
    "structlog>=24.1",

    # HTTP
    "httpx>=0.27",

    # Math
    "numpy>=1.26",

    # Provider SDKs (native, no LangChain)
    "openai>=1.40",
    "anthropic>=0.34",
    "google-genai>=0.3",
    "cohere>=5.8",
    "voyageai>=0.2",

    # Persistence
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.mypy]
# Analysis target is 3.12 so mypy can parse newer typing syntax in third-party
# stubs (e.g. NumPy). Runtime support remains 3.11+ per [project].requires-python.
python_version = "3.12"
plugins = ["pydantic.mypy"]
# Not enabled: provider-SDK type-ignores are needed only when the optional SDKs
# are installed, so flagging them as unused would fail SDK-free environments.
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
