[project]
name = "comparellm-backend"
version = "1.0.0"
description = "Multi-provider LLM comparison and embeddings service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",

    # Config / settings / serialization
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "orjson>=3.10",

    # Logging
    "structlog>=24.1",

    # HTTP
    "httpx>=0.27",

    # Math
    "numpy>=1.26",

    # Provider SDKs (native, no LangChain)
    "openai>=1.40",
    "anthropic>=0.34",
    "google-genai>=0.3",
    "cohere>=5.8",
    "voyageai>=0.2",

    # Persistence
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "redis>=5.0",
]

# PEP 735 dependency group, installed by `uv sync` by default.
[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "coverage[toml]>=7.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# --------------------------------------------------------------------------
# Ruff
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "C90",   # mccabe complexity
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "PT",    # flake8-pytest-style
    "PD",    # pandas-vet
    "PL",    # pylint
    "PERF",  # perflint
]
ignore = [
    "PLR2004", # magic values in comparisons
    "ANN401",  # allow typing.Any in a few generic helper signatures
    "A003",    # class attribute shadowing a builtin (e.g. config field `type`)
    "S104",    # binding to 0.0.0.0 is intended inside containers
    "PLC0415", # deliberate lazy imports: optional provider SDKs / persistence
               # backends are imported only when actually used (see registry/factories)
]

[tool.ruff.lint.pylint]
max-args = 12

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
# Tests may assert, skip annotations, and use broad helpers.
"tests/**" = ["S101", "ANN", "PLR0913", "PT011"]

# --------------------------------------------------------------------------
# mypy
# --------------------------------------------------------------------------
[tool.mypy]
# Analysis target is 3.12 so mypy can parse newer typing syntax in third-party
# stubs (e.g. NumPy). Runtime support remains 3.11+ per [project].requires-python.
python_version = "3.12"
plugins = ["pydantic.mypy"]
# Not enabled: provider-SDK type-ignores are needed only when the optional SDKs
# are installed, so flagging them as unused would fail SDK-free environments.
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

# --------------------------------------------------------------------------
# pytest / coverage
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "contract: tests that assert external provider/API contract shapes",
    "integration: tests that exercise multiple components together",
    "db: tests that require a live database (Postgres/pgvector)",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
